refactor: router, views

--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>斗鱼TV</title>
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="format-detection" content="telephone=no, email=no">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>vuex-douyu</title>
   </head>
   <body>
-    <div id="app">
-      <div style="text-align: center; margin-top: 8em"><p style="margin: 0; padding: 0.2em 0.3em 0.2em 0"><img src="https://shark.douyucdn.cn/app/douyu-mobile/m-douyu-react/build/images/loading.gif" alt="加载中..." style="zoom: 0.5"></p><p style="margin: 0;font-size:12px;color: #777">正在加载，请稍候...</p></div>
-    </div>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
